# upgraded-guacamole

./: .env.example  .gitignore  README.md  package-lock.json  package.json  ticket_dashboard_user_stories.md
backend-rs/: Cargo.toml  README.md
backend-rs/migrations/: 0001_init.sql  0002_sessions.sql  0003_ticket_numbers_and_messages.sql
backend-rs/src/: chat.rs  config.rs  lib.rs  main.rs  state.rs
backend-rs/src/auth/: identity_password.rs  mod.rs
backend-rs/src/tickets/: messages.rs  mod.rs
backend-rs/tests/: auth_integration.rs  tickets_integration.rs
backend-rs/tests/common/: mod.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: client.rs  commands.rs
src-tauri/src/models/: Email.rs  email.rs  mod.rs  notification_service.rs  parser_service.rs
src/api/: auth.ts  tickets.ts
src/components/app/: AppShell.tsx
src/components/auth/: AuthDivider.tsx  LoginForm.tsx  LoginPage.tsx  SsoButton.tsx
src/components/dashboards/: AdminDashboard.tsx  ClinicianDashboard.tsx  GenericTicketsDashboard.tsx
src/components/dashboards/ui/: KpiCard.tsx  Pill.tsx  Sparkline.tsx
src/components/notifications/: ToastCenter.tsx
src/components/routes/: HomeRoute.tsx  TicketDetailRoute.tsx
src/components/ui/: Drawer.tsx  Modal.tsx
src/mock/: dashboardData.ts
src/tauri/: events.ts
